# Brain-JEPA

./: downstream_eval.py  hcp_sex_target_id_map.json  preprocess_hcp_data.py  pyproject.toml
downstream_tasks/: engine_finetune.py  main_finetune.py  main_linprobe.py
downstream_tasks/util/: misc.py
src/datasets/: hca_sex_datasets.py  hcya_sex_datasets.py
src/models/: vision_transformer.py
