[project]
name = "brain-jepa"
version = "0.1.0"
description = "Replication of env"
readme = "README.md"
requires-python = ">=3.8,<3.10"
dependencies = [
    "numpy<2.0",
    "pandas>=2.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "six>=1.17.0",
    "tensorboard>=2.14.0",
    "timm==0.3.2",
    "torch<1.9",
]
